--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>test git</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo!</p>
     <button>send</button>
+    <hr>
+    <div class="box">
+        <span>test</span>
+    </div>
 
 </body>
 </html>
